# emnist-mnist-reader

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
data/emnist_data/: emnist-balanced-test-images-idx3-ubyte  emnist-balanced-test-labels-idx1-ubyte  emnist-byclass-mapping.txt  emnist-byclass-test-images-idx3-ubyte  emnist-byclass-test-labels-idx1-ubyte  emnist-byclass-train-images-idx3-ubyte  emnist-byclass-train-labels-idx1-ubyte  emnist-digits-test-images-idx3-ubyte  emnist-digits-test-labels-idx1-ubyte  emnist-digits-train-images-idx3-ubyte  emnist-digits-train-labels-idx1-ubyte  emnist-mnist-test-images-idx3-ubyte  emnist-mnist-test-labels-idx1-ubyte  emnist-mnist-train-images-idx3-ubyte  emnist-mnist-train-labels-idx1-ubyte
src/: idx_data.cpp  idx_data.h  main.cpp  mnist_data.cpp  mnist_data.h
